syntax = "proto3";

package pb;

option go_package = "github.com/nastaranmotamed/go-microservices-notes/user-service/pb;pb";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
}
